add layout tests